<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:theme="@style/ToolbarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/settings_toolbar"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#ffffff"
        app:subtitleTextColor="#ffffff"
        android:background="?attr/colorPrimary"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>

        <TextView
            android:text="@string/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>

        <CheckBox
            android:text="@string/show_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_icon"
            android:checked="false"
            android:onClick="onShowIconClicked"/>
        />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>


        <CheckBox
            android:text="@string/show_milis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_millis"
            android:checked="false"
            android:onClick="onShowMillisClicked"/>
        />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>

        <CheckBox
            android:text="@string/time_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_white"
            android:checked="false"
            android:onClick="onTimerWhiteClicked"/>
        />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>

    </LinearLayout>

</LinearLayout>