<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="@string/action_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name of the action"
            android:ems="10"
            android:id="@+id/detail_name"
            android:layout_weight="1"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/detail_edit_button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:text="time..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_time"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_date"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:text="Action's notes..."
            android:ems="10"
            android:id="@+id/detail_note" />

    </LinearLayout>

</LinearLayout>