<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="Version 1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAlignment="center"
            android:text="Copyright@2016 \n Filip Elias \n All rights reserved"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>
        <TextView
            android:text="@string/usageConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usage_conditions"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>
        <TextView
            android:text="@string/report_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/report_issue"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d7d7d7"/>
    </LinearLayout>

</LinearLayout>