<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/timer">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:text="Název akce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actionName"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:background="@android:color/background_dark"
            android:textColor="?attr/colorButtonNormal"
            android:elevation="4dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="#0004ff"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/canvas_layout">

        <com.example.root.myapplication.TimerCanvas
            android:id="@+id/signature_canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_notes"
        android:background="@android:color/black">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/timer_note"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:theme="@style/FilipsTheme"
            android:textColor="#ffffff"
            android:textColorHint="#ff0000"
            android:hint="@string/add_some_note"
            android:singleLine="false"
            android:focusable="false"></EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_layout"
        android:background="@android:color/black"
        >

        <Button
            android:text="@string/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bPause"
            android:layout_weight="1"
            android:onClick="pauseClick" />

        <Button
            android:text="@string/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bStop"
            android:layout_weight="1"
            android:onClick="stopClick" />
    </LinearLayout>

</LinearLayout>