<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="1000dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:elevation="4dp"
       >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:background="@color/cards_background">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/details_title" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="@color/cards_lines"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">

                <TextView
                    android:text="time..."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_time"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:elevation="4dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cards_background">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/details_title" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="@color/cards_lines"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_date"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:gravity="right" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="4dp"
        app:cardElevation="4dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cards_background">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/details_title" />

                <ImageButton
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:id="@+id/detail_note_button"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:elevation="4dp"
                    app:srcCompat="@drawable/edit_image"
                    android:backgroundTint="@color/details_title" />

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="@color/cards_lines"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:text="Action's notes..."
                    android:ems="10"
                    android:id="@+id/detail_note"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:focusable="false"
                    android:minLines="3"></EditText>

            </LinearLayout>
        </LinearLayout>


</android.support.v7.widget.CardView>



</LinearLayout>